syntax = "proto3";
package zrchain.validation;

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/x/validation/types";

import "gogoproto/gogo.proto";
import "zrchain/validation/staking.proto";
import "zrchain/validation/solana.proto";
import "zrchain/validation/tx.proto";
import "zrchain/validation/hybrid_validation.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "api/sidecar_service.proto";
import "zrchain/zenbtc/mint.proto";
import "zrchain/dct/mint.proto";

// GenesisState defines the staking module's genesis state.
message GenesisState {
  // params defines all the parameters of related to deposit.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // last_total_power tracks the total amounts of bonded tokens recorded during
  // the previous end block.
  bytes last_total_power = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // last_validator_powers is a special index that provides a historical list
  // of the last-block's bonded validators.
  repeated LastValidatorPower last_validator_powers = 3
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // validators defines the validator set at genesis.
  repeated ValidatorHV validators = 4
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // delegations defines the delegations active at genesis.
  repeated Delegation delegations = 5
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // unbonding_delegations defines the unbonding delegations active at genesis.
  repeated UnbondingDelegation unbonding_delegations = 6
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // redelegations defines the redelegations active at genesis.
  repeated Redelegation redelegations = 7
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // exported defines a bool to identify whether the chain dealing with exported
  // or initialized genesis.
  bool exported = 8;

  // HVParams defines the hybrid validation parameters at genesis.
  HVParams HVParams = 9
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // asset_prices defines the asset prices at genesis.
  map<int32, bytes> asset_prices = 10
      [ (cosmos_proto.scalar) = "cosmos.Dec",
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable) = false,
        (amino.dont_omitempty) = true ];

  // last_valid_ve_height defines the last valid ve height at genesis.
  int64 last_valid_ve_height = 11
      [ (amino.dont_omitempty) = true ];

  // slash_events defines the slash events at genesis.
  map<uint64, SlashEvent> slash_events = 12
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // slash_event_count defines the slash event count at genesis.
  uint64 slash_event_count = 13
      [ (amino.dont_omitempty) = true ];

  // validation_infos defines the validation infos at genesis.
  map<int64, ValidationInfo> validation_infos = 14
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // btc_block_headers defines the Bitcoin block headers at genesis.
  map<int64, api.BTCBlockHeader> btc_block_headers = 15
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // last_used_solana_nonce defines the last used Solana nonce at genesis.
  map<uint64, SolanaNonce> last_used_solana_nonce = 16
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // backfill_requests defines the backfill requests at genesis.
  BackfillRequests backfill_request = 17
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // last_used_ethereum_nonce defines the last used Ethereum nonce at genesis.
  map<uint64, zenbtc.NonceData> last_used_ethereum_nonce = 18
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // requested_historical_bitcoin_headers defines the requested historical Bitcoin headers at genesis.
   zenbtc.RequestedBitcoinHeaders requested_historical_bitcoin_headers = 19
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // avs_rewards_pool defines the AVS rewards pool at genesis.
  map<string, bytes> avs_rewards_pool = 20
      [  (cosmos_proto.scalar) = "cosmos.Int",
      (gogoproto.customtype) = "cosmossdk.io/math.Int",
      (gogoproto.nullable) = false,
      (amino.dont_omitempty) = true ];
  
  // ethereum_nonce_requested defines the Ethereum nonce requested at genesis.
  map<uint64, bool> ethereum_nonce_requested = 21
      [ (amino.dont_omitempty) = true ];

  // solana_nonce_requested defines the Solana nonce requested at genesis.
  map<uint64, bool> solana_nonce_requested = 22
      [ (amino.dont_omitempty) = true ];

  // solana_zentp_accounts_requested defines the Solana Zentp accounts requested at genesis.
  map<string, bool> solana_zentp_accounts_requested = 23
      [ (amino.dont_omitempty) = true ];

  // solana_accounts_requested defines the Solana accounts requested at genesis.
  map<string, bool> solana_accounts_requested = 24
      [ (amino.dont_omitempty) = true ];

  // validator_mismatch_counts defines the validator mismatch counts at genesis.
  map<string, ValidatorMismatchCount> validator_mismatch_counts = 25
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // last_completed_zentp_mint_id defines the last completed Zentp mint id at genesis.
  uint64 last_completed_zentp_mint_id = 26
      [ (amino.dont_omitempty) = true ];

  // avs_delegations defines the AVS delegations at genesis.
  map<string, bytes> avs_delegations = 27
    [ (cosmos_proto.scalar) = "cosmos.Int",
      (gogoproto.customtype) = "cosmossdk.io/math.Int",
      (gogoproto.nullable) = false,
      (amino.dont_omitempty) = true ];

  // validator_delegations defines the validator delegations at genesis.
  map<string, bytes> validator_delegations = 28
      [ (cosmos_proto.scalar) = "cosmos.Int",
      (gogoproto.customtype) = "cosmossdk.io/math.Int",
      (gogoproto.nullable) = false,
      (amino.dont_omitempty) = true ];

  // latest_btc_header_height defines the latest Bitcoin header height at genesis.
  int64 latest_btc_header_height = 29
      [ (amino.dont_omitempty) = true ];    

  // solana_dct_accounts_requested defines the Solana accounts requested for DCT assets at genesis.
  map<string, bool> solana_dct_accounts_requested = 30
      [ (amino.dont_omitempty) = true ];

  // zcash_block_headers defines the ZCash block headers at genesis.
  map<int64, api.BTCBlockHeader> zcash_block_headers = 31
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // requested_historical_zcash_headers defines the requested historical ZCash headers at genesis.
  dct.RequestedZcashHeaders requested_historical_zcash_headers = 32
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // latest_zcash_header_height defines the latest ZCash header height at genesis.
  int64 latest_zcash_header_height = 33
      [ (amino.dont_omitempty) = true ];

}

// LastValidatorPower required for validator set update logic.
message LastValidatorPower {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // address is the address of the validator.
  string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // power defines the power of the validator.
  int64 power = 2;
}
